--- a/meetaurafrontend/src/components/googlebutton.css
+++ b/meetaurafrontend/src/components/googlebutton.css
@@ -1,21 +1,29 @@
-.google-button {
+ .google-button {
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: white;
+    justify-content:center;
+    background-color: #615efc;
     border: 1px solid #ddd;
     border-radius: 4px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     font-size: 14px;
     font-weight: 500;
-    padding: 10px 15px;
+    padding-top: 40 px;
     cursor: pointer;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    margin: 20 px;
+    width: 100% ;
+   
+    margin-top: 20px;
+    padding-block: 15px;
+    padding-inline: 10px;
+    color: #f7f7f7;
   }
   
   .google-button:hover {
     background-color: #f7f7f7;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+    color: black;
   }
   
   .google-button img {
