--- a/meetaurafrontend/src/css/Home.css
+++ b/meetaurafrontend/src/css/Home.css
@@ -1,9 +1,17 @@
 /* General styles */
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
-    background-color: #000;
-    color: #fff;
-  }
-  
+  background-color: #000;
+  color: #fff;
+  background-image: url('../assects/new\ home\ bg\ 2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+}
   /* Container style */
   .home-container {
     padding: 20px;
