--- a/meetaurafrontend/src/css/PublicRooms.css
+++ b/meetaurafrontend/src/css/PublicRooms.css
@@ -9,6 +9,7 @@
     justify-content: center; /* Centers cards horizontally */
     padding: 20px; /* Use a specific padding value */
       width: 100%; /* Ensure container has full width */
+    margin-top:100px;
   
 }
 
